--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </a>
         </div>
         <div class="popup-quote">
-          Hi, I am a Mecanical Engineering student,<br> <br> Expert in HTML, Kali Linux.<br><br> Learning C, Cpp, java.<br> Love in Drawing.<br><br> 2022.<br><br> My Dream is creating a Time- machine,<br><br> E=mc^2
+          Hi, I am Amit Kumar Pattanayak ,<br> <br>,
         </div
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
