--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       </a>
       <br>
       <br>
-      <a class="link" href="https://akashdip2001.github.io/linktree/" target="_blank">
-        <i class="fa-solid fa-hands-holding-heart">&nbsp;</i>  Back to main manu
+      <a class="link"  target="_blank">
+        
       </a>
     </div>
 
