--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- End of Parallax Pixel Background Animation -->
 
     <a id="profilePicture" href="#popup">
-      <img src="img/000.jpg.jpg" alt="amit pattanayak" >
+      <img src="img/000.jpg.jpg"  >
     </a>
 
     <div class="overlay" id="popup">
