--- a/index.html
+++ b/index.html
@@ -62,22 +62,22 @@
         <i class="fab fa-linkedin-in">&nbsp;</i> Linked in
       </a>
       <a class="link" href="https://www.twitter.com/@AMITPAT90414885" target="_blank">
-        <i class="fa-brands fa-twitter">&nbsp;</i> Twitter
+        <i class="fab fa-twitter" aria-hidden="true">&nbsp;</i> Twitter
       </a>
       <br>
        <a class="link" href="https://wa.me/qr/XBVKLKOGTQA2N1" target="_blank">
-        <i class="fab fa-whatsapp">&nbsp;</i> Whats app
+        <i class="fab fa-whatsapp">&nbsp;</i> Whatsapp
       </a>
       <br>
       <br>
       <a class="link" href="https://t.me/natureloveramit126331" target="_blank">
-        <i class="fa fa-telegram">&nbsp;</i> Telegram
+        <i class="fab fa-telegram">&nbsp;</i> Telegram
       </a>
       <br>
       <br>
-      <a class="link"  target="_blank">
+      <!-- <a class="link"  target="_blank"> -->
         
-      </a>
+      <!-- </a> -->
     </div>
 
     <div id="hashtag">
