--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 
     <div id="hashtag">
-      ❤ Amit Kumar Pattanayak ❤
+      ❤️💖🫠Amit Kumar Pattanayak🫠💖❤️
     </div>
   </body>
 </html>
