--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </a>
         </div>
         <div class="popup-quote">
-           Hi, my name is Amit Kumar  Pattanayak and I am a first-year computer science engineering student with a strong interest in web development.  I am excited to learn more about front-end and back-end development and how to create dynamic, user-friendly websites and applications. In my free time, I enjoy experimenting with different technologies and frameworks, such as HTML, CSS, JavaScript, and PHP, to improve my skills and build projects for fun. I am eager to continue my education and explore new opportunities in the field of web development<br> <br>,
+           Hi, my name is Amit Kumar  Pattanayak and I am a first-year computer science engineering student with a strong interest in web development.  I am excited to learn more about front-end and back-end development and how to create dynamic, user-friendly websites and applications. In my free time, I enjoy experimenting with different technologies and frameworks, such as HTML, CSS, JavaScript, and PHP, to improve my skills and build projects for fun. I am eager to continue my education and explore new opportunities in the field of web development<br> <br>😎
         </div
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
