--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="popup">
         <div class="popup-photo">
           <a href="amit_dit.jpg" target="_blank">
-            <img src="img/000.jpg" alt="amit">
+            <img src="img/000.jpg" 
           </a>
         </div>
         <div class="popup-quote">
