--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
     </div>
 
     <div id="hashtag">
-      ❤️💖🫠Amit Kumar Pattanayak🫠💖❤️
-    </div>
+      
+🎊 শুভ নববর্ষ 🎉🎉
+    ১৪৩০    </div>
   </body>
 </html>
