--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
     </div>
 
     <div id="userName">
-      WEB DEVELOPER
-🤗🤗
+     🤗 BEGINNER 🤗
+               
     </div>
 
     <div id="links">
