--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
 
     <div id="hashtag">
       
-🎊 শুভ নববর্ষ🎉🎉
-    💖💖💖💖💖💖💖💖💖💖    </div>
+  🤗Welcome to my corner of the internet - where I'm just getting started on my journey!🤗  </div>
   </body>
 </html>
