--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     </div>
 
     <div id="userName">
-     🤗 BEGINNER 🤗
+     
+Welcome to my corner of the internet - where I'm just getting started on my journey!
+
+
                
     </div>
 
