--- a/index.html
+++ b/index.html
@@ -86,6 +86,6 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
 
     <div id="hashtag">
       
-  🤗Welcome to my corner of the internet - where I'm just getting started on my journey!🤗  </div>
+  🤗AMIT DIT🤗  </div>
   </body>
 </html>
