--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
       <a class="link" href="https://www.facebook.com/amit.pattanayak.399?mibextid=ZbWKwL" target="_blank">
         <i class="fab fa-facebook-f">&nbsp;</i> Facebook
       </a>
-      <a class="link" href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3Bm9X1qR8MRTWIu83n3PIEqQ%3D%3D" target="_blank">
+      <a class="link" href="https://www.linkedin.com/in/amit-kumar-pattanayak-" target="_blank">
         <i class="fab fa-linkedin-in">&nbsp;</i> Linked in
       </a>
       <a class="link" href="https://www.twitter.com/@AMITPAT90414885" target="_blank">
