--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
        <a class="link" href="https://wa.me/qr/XBVKLKOGTQA2N1" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i> Whatsapp
       </a>
-      <br>
-      <br>
       <a class="link" href="https://t.me/natureloveramit126331" target="_blank">
         <i class="fab fa-telegram">&nbsp;</i> Telegram
       </a>
+      <a class="link" href="https://discord.gg/NCWMbXF7Kr" target="_blank">
+        <i class="fa-brands fa-discord">&nbsp;</i> Discord
+      </a>  
       <br>
       <br>
       <!-- <a class="link"  target="_blank"> -->
