--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
         <i class="fab fa-telegram">&nbsp;</i> Telegram
       </a>
       <a class="link" href="https://discord.gg/NCWMbXF7Kr" target="_blank">
-        <i class="fa-brands fa-discord">&nbsp;</i> Discord
+        <i class="fab fa-discord">&nbsp;</i> Discord
       </a>  
       <br>
       <br>
