--- a/index.html
+++ b/index.html
@@ -54,17 +54,19 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
       <a class="link" href="https://github.com/AMITPATTANAYAK" target="_blank">
         <i class="fab fa-github">&nbsp;</i>  Github
       </a>
+      <br>
       <a class="link" href="https://instagram.com/natureloveramit126331?igshid=ZDdkNTZiNTM=" target="_blank">
         <i class="fab fa-instagram">&nbsp;</i>  Instagram
       </a>
       <br>
-      <br>
       <a class="link" href="https://www.facebook.com/amit.pattanayak.399?mibextid=ZbWKwL" target="_blank">
         <i class="fab fa-facebook-f">&nbsp;</i> Facebook
       </a>
+      <br>
       <a class="link" href="https://www.linkedin.com/in/amit-kumar-pattanayak-" target="_blank">
         <i class="fab fa-linkedin-in">&nbsp;</i> Linked in
       </a>
+      <br>
       <a class="link" href="https://www.twitter.com/@AMITPAT90414885" target="_blank">
         <i class="fab fa-twitter" aria-hidden="true">&nbsp;</i> Twitter
       </a>
@@ -72,11 +74,17 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
        <a class="link" href="https://wa.me/qr/XBVKLKOGTQA2N1" target="_blank">
         <i class="fab fa-whatsapp">&nbsp;</i> Whatsapp
       </a>
+      <br>
       <a class="link" href="https://t.me/natureloveramit126331" target="_blank">
         <i class="fab fa-telegram">&nbsp;</i> Telegram
       </a>
+      <br>
       <a class="link" href="https://discord.gg/NCWMbXF7Kr" target="_blank">
         <i class="fab fa-discord">&nbsp;</i> Discord
+      </a>
+      <br>
+      <a class="link" href="https://naturelover-126331.netlify.app/" target="_blank">
+        <i class="fab fa-spotify">&nbsp;</i> Spotify 
       </a>  
       <br>
       <br>
