--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
         <i class="fab fa-spotify">&nbsp;</i> Spotify 
       </a>  
       <br>
+      <a class="link" href="https://amitpattanayakportfolio.netlify.app/" target="_blank">
+        <i class="fab fa-arrow-progrss">&nbsp;</i> Portfolio
+      </a>   
       <br>
       <!-- <a class="link"  target="_blank"> -->
         
