--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
       </a>  
       <br>
       <a class="link" href="https://amitpattanayakportfolio.netlify.app/" target="_blank">
-        <i class="fab fa-arrowprogress">&nbsp;</i> Portfolio
+        <i class="fab fa-arrow-progress">&nbsp;</i> Portfolio
       </a>   
       <br>
       <!-- <a class="link"  target="_blank"> -->
