--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@ Welcome to my corner of the internet - where I'm just getting started on my jour
         <i class="fab fa-discord">&nbsp;</i> Discord
       </a>
       <br>
-      <a class="link" href="https://naturelover-126331.netlify.app/" target="_blank">
-        <i class="fab fa-spotify">&nbsp;</i> Spotify 
-      </a>  
-      <br>
-      <a class="link" href="https://amitpattanayakportfolio.netlify.app/" target="_blank">
-        <i class="">&nbsp;</i> Portfolio
+      <a class="link" href="https://www.threads.net/@natureloveramit126331" target="_blank">
+        <i class="fa-brands fa-meta fa-beat">&nbsp;</i> Threads
       </a>   
       <br>
       <!-- <a class="link"  target="_blank"> -->
